--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,165 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.main{
+  width: 100%;
+  height: 100vh;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+video{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
+.logo{
+  width: 60px;
+  height: 40px;
+  margin-left: 10px;
+  background-color: rgb(107, 75, 62);
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
+}
+.content{
+  position: absolute;
+  width:100%;
+  height: 100%;
+  top:0;
+  display: flex; 
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+   align-items: center;
+  color: wheat;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.navBar {
+  display: flex;
+  flex-direction: row;
+  background-color: rgb(107,75,62);
+  border-bottom-style: solid;
+  border-bottom-width: 3px;
+  border-bottom-color: rgb(248, 244, 249);
+  align-items: center;
+  min-height: 50px;
+  padding-left: 25px;
+  font-size: large;
+  width: 100%;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  text-align: center;
+} 
+
+.cart-items {
+  align-items: center;
+  position: absolute;
+  right: 20px;
+}
+.icon-cart {
+  width: 25px;
+  height: 25px;
+  margin-top: 8px;
+  margin-right: 30px;
+}
+
+.cart-num {
+  background-color: rgb(248,244,249);
+  position: absolute;
+  color: black;
+  font-weight: bold;
+  top: 7px;
+  right: 6px;
+  background-color: rgba(255, 255, 255, 0.8);
+  border-radius: 10px;
+  padding: 5px;
+}
+.card-price {
+  font-size: 18px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  /* margin-bottom: 10px; */
+}
+.all-products {
+  display: flex;
+  /* margin: 20px; */
+  flex-wrap: wrap;
+  background-color: rgb(255,214,175);
+  width: 100%;
+  height: 100%;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.card {
+  border-style: solid;
+  border-width: 3px;
+  border-color: rgb(248,244,249);
+  background-color:rgb( 196,  158, 133);
+  border-radius: 10px;
+  max-width: 220px;
+  /* flex-flow: column; */
+  margin:10px;
+  text-align: center;
+ flex-basis: 280px; 
+}
+
+.card-img-top {
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  width: 220px;
+  height: 220px;
+  background-color: white;
+}
+
+.card-body {
+  margin: 10px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  text-align: center;
+  /* display: flex;
+  flex-direction: column; */
+
+}
+
+.btn {
+  background-color: transparent;
   color: white;
+  padding-top: 10px;
+  padding-bottom: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin: 3px;
+  border-radius: 3px;
+  border-width: 0px; 
+  /* margin-top: auto; */
+    /* border-style: none;
+    background-color: transparent;
+    margin: 20px;
+    padding-bottom: 5px;
+    padding-top: 5px; */
+
 }
 
-.App-link {
-  color: #61dafb;
+a {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.cart-container {
+  margin: 20px;
+}
+
+.card-cart {
+  display: flex;
+  flex-direction: row;
+  border-style: solid;
+  border-width: 2px;
+  border-color: rgb(211, 211, 211);
+  border-radius: 10px;
+  max-width: 500px;
+}
+
+.card-img-left {
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+.App{
+  background-color: rgb(255, 214, 175);
+}
+.card-text {
+  height: 100px;
+  margin-bottom: 30px;
 }
