--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,7 @@ video{
   width: 100%;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   text-align: center;
+  /* position: fixed; */
 } 
 
 .cart-items {
@@ -79,8 +80,7 @@ video{
   background-color: rgb(255,214,175);
   width: 100%;
   height: 100%;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 0%;
 }
 
 .card {
@@ -100,7 +100,7 @@ video{
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   width: 220px;
-  height: 220px;
+  height: 250px;
   background-color: white;
 }
 
@@ -163,3 +163,47 @@ a {
   height: 100px;
   margin-bottom: 30px;
 }
+.btn:hover{
+  cursor: pointer;
+}
+.div-order {
+  width: 500px;
+  height: fit-content;
+  border-radius: 20px;
+  background-color: rgb(196, 158, 133);
+  padding: 20px;
+  margin: 20px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  justify-content: center;
+  margin-left: auto;
+    margin-right: auto;
+}
+
+.txt-total {
+  text-align: end;
+}
+
+.table-order {
+  text-align: center;
+}
+
+th {
+  padding: 10px;
+
+}
+
+td {
+  padding-left: 15px;
+  padding-right: 15px;
+  border-bottom-style: dotted;
+  border-width: 0.2ch;
+  border-color: rgb(248, 244, 249);
+}
+.container{
+  width: 100%;
+  height: 100%;
+  background-color:rgb(255, 214, 175) ;
+  margin-bottom: 0%;
+  display: flex;
+}
+
